tests/golden/errors/main-error.rk
fn boom() (error?) {
    return error.new("kaboom")
}
fn main() (error?) {
    check boom()
    return none
}
